# chargequbit

./: .gitignore  LICENSE  README.md  __init__.py  charge_calculator.py  eeroq_logo.dxf  fonts_aller_display.py  pyproject.toml  qubit_calculator.py  requirements.txt  schrodinger1d.py  schrodinger2d.py  schrodinger2d_updated.py  setup.py  utils.py
src/: __init__.py  electron.py  schrodinger1d.py  schrodinger2d.py
src/chargequbit/: electron.py  schrodinger1d.py  schrodinger2d.py
